# OccamDraft

./: .gitignore  DESIGN.md  QUICKSTART.md  README.md  pyproject.toml
agents/occamdraft_agent/: agent.py
docs/: DEMO_TRACE.md  EVALUATION_CHECKLIST.md
profiles/: profile.example.json
src/occamdraft/: __init__.py  browser.py  cli.py  config.py  draft.py  explore.py  llm.py  models.py
tests/: test_adk_agent.py  test_core.py  test_draft.py  test_explorer.py
tests/fixtures/: example.profile.json
