[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "occamdraft"
version = "0.1.0"
description = "Evidence-first Web route explorer for drafting OccamQA tasks"
requires-python = ">=3.12"
dependencies = ["google-adk>=2,<3", "google-genai>=1.0", "pydantic>=2.10,<3"]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
occamdraft = "occamdraft.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/occamdraft"]
